# yomiagecode

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
scripts/: run.bat
src/: main.py
src/tts/: azure_wrapper.py  google_tts_wrapper.py  tts_wrapper.py  voicevox_wrapper.py
src/utilities/: config_utilities.py  sound_utilities.py  text_utilities.py
src/yomiagecode/: __init__.py  discord_functions.py  tts_functions.py
